--- a/docs/changelog/1.16/1.0.1-1.16.5-1.0.md
+++ b/docs/changelog/1.16/1.0.1-1.16.5-1.0.md
@@ -4,3 +4,7 @@ _Not Released Yet_
 
 #### Requirements
 - **MinecraftForge:** 1.16.5-36.2.2
+
+#### Fixes
+
+- Updated an error message to avoid potential confusion.
