feat: improve configuration documentation

--- a/docs/changelog/1.16/1.0.1-1.16.5-1.0.md
+++ b/docs/changelog/1.16/1.0.1-1.16.5-1.0.md
@@ -5,6 +5,10 @@ _Not Released Yet_
 #### Requirements
 - **MinecraftForge:** 1.16.5-36.2.2
 
+#### Improvements
+
+- Improved documentation for configuration options.
+
 #### Fixes
 
 - Updated an error message to avoid potential confusion.
