--- a/docs/changelog/1.16/1.0.1-1.16.5-1.0.md
+++ b/docs/changelog/1.16/1.0.1-1.16.5-1.0.md
@@ -7,6 +7,10 @@ _Not Released Yet_
 
 #### Improvements
 
+- Added MineColonies' citizens (`minecolonies:citizen`) to the default allowlist.
+    - This will only take effect for new installations. If you wish to whitelist
+      MineColonies' citizens to an existing installation, you will still have to
+      add the exception manually.
 - Improved documentation for configuration options.
 
 #### Fixes
