--- a/docs/changelog/1.16/1.0.2-1.16.5-1.0.md
+++ b/docs/changelog/1.16/1.0.2-1.16.5-1.0.md
@@ -4,3 +4,8 @@ _Not Released Yet_
 
 #### Requirements
 - **MinecraftForge:** 1.16.5-36.2.2
+
+#### Fixes
+
+- Fixed a bug that caused carriage-return characters to be visible in the mod's
+  description in some places.
