--- a/docs/changelog/1.16/1.0.2-1.16.5-1.0.md
+++ b/docs/changelog/1.16/1.0.2-1.16.5-1.0.md
@@ -17,5 +17,9 @@ _Not Released Yet_
 
 #### Fixes
 
+- Added MineColonies' visitors (`minecolonies:visitor`) to the default allowlist.
+  - This will only take effect for new installations. If you wish to whitelist
+    MineColonies' citizens to an existing installation, you will still have to
+    add the exception manually.
 - Fixed a bug that caused carriage-return characters to be visible in the mod's
   description in some places.
